--- a/index.css
+++ b/index.css
@@ -1,17 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap");
 
-*{
-  font-family: 'Shadows Into Light Two', cursive;
-
+* {
+  font-family: "Shadows Into Light Two", cursive;
 }
 body {
-  font-family: 'Shadows Into Light Two', cursive;
-  background-color: #39B2D9;
+  font-family: "Shadows Into Light Two", cursive;
+  background-color: #39b2d9;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-  
 }
 
 header {
@@ -28,9 +26,8 @@ main {
   max-width: 1400px;
   background-color: white;
   border-radius: 20px;
-  -webkit-box-shadow: 0px 0px 21px 11px rgba(0,0,0,0.71); 
-  box-shadow: 0px 0px 21px 11px rgba(0,0,0,0.71);
-  
+  -webkit-box-shadow: 0px 0px 21px 11px rgba(0, 0, 0, 0.71);
+  box-shadow: 0px 0px 21px 11px rgba(0, 0, 0, 0.71);
 }
 
 form {
@@ -40,7 +37,7 @@ form {
   min-height: 20vh;
 }
 
-form input{
+form input {
   padding: 0.5rem;
   font-size: 2rem;
   border: solid 3px black;
@@ -65,10 +62,10 @@ form button {
   background-color: white;
   cursor: pointer;
   transition: all 0.3s ease;
-  color: #39B2D9;
+  color: #39b2d9;
 }
 form button:hover {
-  background-color: #39B2D9;
+  background-color: #39b2d9;
   color: white;
 }
 
@@ -116,13 +113,15 @@ form button:hover {
   border-radius: 5px;
   padding: 10px;
 }
+.active-modification-button {
+  display: none;
+}
 .todo .erase-button {
   background-color: rgb(238, 83, 83);
   border: none;
   border-radius: 5px;
   margin: 0 2vw;
   padding: 10px;
-
 }
 
 .fa-trash,
